tests/errors/runtime.WrongArgumentType.2.res
3
>> Runtime | File: runtime.WrongArgumentType.2.art
     error | Line: 5
           | 
           | cannot perform add -> :integer :string
           | incorrect argument type for second parameter
           | accepts :integer :floating :complex :rational :color